# qsl73

./: .gitignore  CHANGELOG.md  CLAUDE.md  KONZEPT.md  LICENSE  README.md  ROADMAP.md  config.example.yaml  pyproject.toml  qsl73.spec  requirements-dev.txt  requirements.txt  run_qsl73.py
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md  discovery.md  realtest-befunde-2026-06-17.md
docs/adr/: ADR-0001-3-rollen-arbeitsmodell.md  ADR-0002-schreibmodell-vorschau-und-bestaetigung.md  ADR-0003-schreibreihenfolge-db-zuerst-dann-tags.md  ADR-0004-schema-validierung-gegen-log4om-updates.md  ADR-0005-papier-qsl-bestaetigt-format.md  ADR-0006-rv-default-undefined.md  ADR-0007-matching-datenprioritaet-qr-ocr-manuell.md  ADR-0008-nebenlaeufigkeit-gast-schreiber.md  ADR-0009-teststrategie-und-ci.md  ADR-0010-crypto-abstraktionsschicht.md  ADR-0011-qr-decoding-client-seitig.md  ADR-0012-robustheit-kartenauswertung.md  ADR-0013-rufzeichen-zerlegung-und-zeitlogik.md  ADR-0014-unbestimmte-felder-none.md  (+41 more)
installer/: qsl73-beta.iss  qsl73.iss
src/qsl73/: __init__.py  (+18 more)
tests/: conftest.py  test_audit.py  test_callsign.py  test_changelog_extraction.py  test_config.py  test_config_backup.py  test_crypto.py  test_error_report.py  test_log4om_db.py  test_log4om_write.py  test_logging_setup.py  test_make_docs_html.py  test_matching.py  test_normalize.py  test_paperless.py  test_qr.py  test_run.py  test_setup_assistant.py  test_updater.py
tools/: build.ps1  build_installer.ps1  create_dh3kr_test_db.py  create_dl0aaa_test_db.py  diag_about_dialog.py  make_docs_html.py  make_icon.py
(+44 files in other folders)
