[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsl73"
version = "0.2.2"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "acceptance: Abnahme-Tests gegen echte DB-Kopie (erfordert docs/testdateien/TESTDB_DF1DS_Mai24_backup.sqlite)",
    "slow: Tests mit langer Laufzeit (Acceptance-Tests gegen DB-Kopie); lokal mit -m 'not slow' überspringen",
]
timeout = 60
